# cabal-tools

./: .gitignore  cabal-tools.cabal  cabal.project  flake.nix  fourmolu.yaml
app/: ActiveBounds.hs  AvailablePackages.hs  Builder.hs  GenBounds.hs  InstallPlan.hs  MakeInstallPlan.hs  ProjectBuilding.hs  ProjectConfig.hs  ReadInstallPlan.hs  ReadPlan.hs  ReadSolverPlan.hs  Solver.hs  WritePlanJson.hs
app/Builder/: ProjectBuilding.hs
app/ReadPlan/: Tests.hs
app/Unjson/: Generic.hs
cabal-gen-bounds/: CHANGELOG.md  cabal-gen-bounds.cabal  flake.nix
cabal-gen-bounds/app/: Main.hs
nix/: hix.nix
other/: CHANGELOG.md
other/app/: AvailablePackages.hs
src/: ComponentFlaggedDep.hs  Dependency.hs  FlaggedDep.hs  Opts.hs  PrettyPrint.hs  PrettyPrintSimple.hs  RecursiveFlaggedDep.hs  SetupDeps.hs  SolverIndex.hs  WithCacheFile.hs
src/My/: ProjectPlanning.hs
src/My/Client/: ProjectPlanning.hs
src/Original/Distribution/Client/: ProjectPlanning.hs
src/SourcePackage/: Lens.hs
