cabal-version:   3.6
name:            cabal-tools
version:         0.1.0.0
license:         MIT
author:          andrea@andreabedini.com
maintainer:      Andrea Bedini
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    My.ProjectPlanning
    Original.Distribution.Client.ProjectPlanning

  build-depends:
    , base                  ^>=4.16
    , bytestring
    , Cabal                 ^>=3.8
    , cabal-install         ^>=3.8
    , cabal-install-solver  ^>=3.8
    , Cabal-syntax          ^>=3.8
    , containers
    , directory
    , filepath
    , hackage-security
    , mtl
    , optparse-applicative
    , pretty

  hs-source-dirs:   src
  default-language: GHC2021
  other-extensions: ImportQualifiedPost

executable cabal-install-plan
  import:           warnings
  main-is:          InstallPlan.hs
  build-depends:
    , base                  ^>=4.16
    , bytestring
    , Cabal                 ^>=3.8
    , cabal-install         ^>=3.8
    , cabal-install-solver  ^>=3.8
    , Cabal-syntax          ^>=3.8
    , cabal-tools
    , containers
    , directory
    , filepath
    , hackage-security
    , mtl
    , optparse-applicative
    , pretty

  hs-source-dirs:   app
  default-language: GHC2021
  other-extensions: ImportQualifiedPost

executable cabal-project-config
  import:           warnings
  main-is:          ProjectConfig.hs
  build-depends:
    , aeson
    , base                  ^>=4.16
    , Cabal
    , cabal-install
    , cabal-install-solver
    , Cabal-syntax
    , pretty-show
    , pretty-simple
    , prettyprinter

  hs-source-dirs:   app
  default-language: Haskell2010

executable cabal-builder
  import:           warnings
  main-is:          Builder.hs
  other-modules:    Builder.ProjectBuilding
  build-depends:
    , aeson
    , base                  ^>=4.16
    , bytestring
    , Cabal                 ^>=3.8
    , cabal-install         ^>=3.8
    , cabal-install-solver  ^>=3.8
    , Cabal-syntax          ^>=3.8
    , containers
    , directory
    , filepath
    , optparse-applicative
    , prettyprinter
    , process
    , tar

  hs-source-dirs:   app
  default-language: Haskell2010

executable cabal-available-packages
  import:           warnings
  main-is:          AvailablePackages.hs
  build-depends:
    , aeson
    , base                  ^>=4.16
    , bytestring
    , Cabal
    , cabal-install
    , cabal-install-solver
    , Cabal-syntax
    , pretty-simple
    , prettyprinter
    , text

  hs-source-dirs:   app
  default-language: Haskell2010

executable cabal-gen-bounds
  import:           warnings
  main-is:          GenBounds.hs
  build-depends:
    , base                  ^>=4.16
    , Cabal                 ^>=3.8
    , cabal-install         ^>=3.8
    , cabal-install-solver  ^>=3.8
    , Cabal-syntax          ^>=3.8
    , containers
    , filepath

  hs-source-dirs:   app
  default-language: Haskell2010

executable cabal-read-plan
  import:           warnings
  main-is:          ReadPlan.hs
  build-depends:
    , base                  ^>=4.16
    , binary
    , bytestring
    , Cabal                 ^>=3.8
    , cabal-install         ^>=3.8
    , cabal-install-solver  ^>=3.8
    , Cabal-syntax          ^>=3.8
    , containers
    , filepath

  hs-source-dirs:   app
  default-language: Haskell2010

executable cabal-active-bounds
  import:           warnings
  main-is:          ActiveBounds.hs
  build-depends:
    , base                  ^>=4.16
    , binary
    , bytestring
    , Cabal                 ^>=3.8
    , cabal-install         ^>=3.8
    , cabal-install-solver  ^>=3.8
    , Cabal-syntax          ^>=3.8
    , containers
    , filepath

  hs-source-dirs:   app
  default-language: Haskell2010

-- executable cabal-project-building
--     import:           warnings
--     main-is:          ProjectBuilding.hs
--     build-depends:    base                  ^>= 4.16
--                     , binary
--                     , bytestring
--                     , containers
--                     , directory
--                     , filepath
--                     , Cabal                 >= 3.8
--                     , cabal-install         >= 3.8
--                     , cabal-install-solver  >= 3.8
--                     , Cabal-syntax          >= 3.8
--     hs-source-dirs:   app
--     default-language: Haskell2010
