cabal-version:   3.6
name:            cabal-tools
version:         0.1.0.0
license:         MIT
author:          andrea@andreabedini.com
maintainer:      Andrea Bedini
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall
  default-language: Haskell2010
  default-extensions: ImportQualifiedPost

library utils
  import:           warnings
  exposed-modules:
    Opts
    PrettyPrintSimple
    SourcePackage.Lens
    WithCacheFile

    ComponentFlaggedDep
    Dependency
    FlaggedDep
    SetupDeps
    SolverIndex

  build-depends:
    , base
    , binary
    , bytestring
    , Cabal
    , cabal-install
    , cabal-install-solver
    , Cabal-syntax
    , containers
    , monoidal-containers
    , optparse-applicative
    , prettyprinter
    , pretty-simple
    , recursion-schemes
    , semialign
    , text
    , these

  hs-source-dirs:   src

executable cabal-show-project-config
  import:           warnings
  main-is:          ProjectConfig.hs
  build-depends:
    , aeson
    , base
    , binary
    , bytestring
    , Cabal
    , cabal-install
    , cabal-install-solver
    , Cabal-syntax
    , cabal-tools:utils
    , optparse-applicative

  hs-source-dirs:   app

executable cabal-available-packages
  import:           warnings
  main-is:          AvailablePackages.hs
  build-depends:
    , aeson
    , base
    , binary
    , bytestring
    , Cabal
    , cabal-install
    , cabal-install-solver
    , Cabal-syntax
    , cabal-tools:utils
    , optparse-applicative
    , text

  hs-source-dirs:   app

executable cabal-solver
  import:           warnings
  main-is:          Solver.hs
  build-depends:
    , aeson
    , base
    , binary
    , bytestring
    , Cabal
    , cabal-install
    , cabal-install-solver
    , Cabal-syntax
    , cabal-tools:utils
    , containers
    , data-fix
    , monoidal-containers
    , mtl >= 2.3.1
    , optparse-applicative
    , prettyprinter
    , recursion-schemes
    , semialign
    , text
    , these

  hs-source-dirs:   app

executable cabal-show-install-plan
  import:           warnings
  main-is:          ReadInstallPlan.hs
  build-depends:
    , base
    , binary
    , bytestring
    , Cabal                 >=3.8
    , cabal-install         >=3.8
    , cabal-install-solver  >=3.8
    , Cabal-syntax          >=3.8
    , cabal-tools:utils
    , containers
    , filepath
    , optparse-applicative

  hs-source-dirs:   app

executable cabal-show-solver-plan
  import:           warnings
  main-is:          ReadSolverPlan.hs
  build-depends:
    , base
    , binary
    , bytestring
    , Cabal                 >=3.8
    , cabal-install         >=3.8
    , cabal-install-solver  >=3.8
    , Cabal-syntax          >=3.8
    , cabal-tools:utils
    , containers
    , filepath
    , optparse-applicative

  hs-source-dirs:   app

executable cabal-write-plan-json
  import:           warnings
  main-is:          WritePlanJson.hs
  build-depends:
    , base
    , binary
    , bytestring
    , Cabal                 >=3.8
    , cabal-install         >=3.8
    , cabal-install-solver  >=3.8
    , Cabal-syntax          >=3.8
    , cabal-tools:utils
    , containers
    , filepath
    , optparse-applicative

  hs-source-dirs:   app

executable cabal-active-bounds
  import:           warnings
  main-is:          ActiveBounds.hs
  build-depends:
    , base
    , binary
    , bytestring
    , Cabal                 >=3.8
    , cabal-install         >=3.8
    , cabal-install-solver  >=3.8
    , Cabal-syntax          >=3.8
    , cabal-tools:utils
    , containers
    , filepath

  hs-source-dirs:   app
