cabal-version:   3.6
name:            cabal-tools
version:         0.1.0.0
license:         MIT
author:          andrea@andreabedini.com
maintainer:      Andrea Bedini
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library utils
  import:           warnings
  exposed-modules:
    Opts
    WithCacheFile

  build-depends:
    , base                  ^>=4.16 || ^>=4.17 || ^>= 4.18
    , binary
    , bytestring
    , Cabal                  ==3.10.1.0
    , cabal-install          ==3.10.1.0
    , cabal-install-solver   ==3.10.1.0
    , Cabal-syntax           ==3.10.1.0
    , optparse-applicative

  hs-source-dirs:   src
  default-language: Haskell2010

executable cabal-available-packages
  import:           warnings
  main-is:          AvailablePackages.hs
  build-depends:
    , aeson
    , base
    , binary
    , bytestring
    , Cabal
    , cabal-install
    , cabal-install-solver
    , Cabal-syntax
    , cabal-tools:utils
    , optparse-applicative
    , pretty-simple
    , text

  hs-source-dirs:   app
  default-language: Haskell2010

executable cabal-make-install-plan
  import:           warnings
  main-is:          MakeInstallPlan.hs
  build-depends:
    , base
    , binary
    , bytestring
    , Cabal
    , cabal-install
    , cabal-install-solver
    , Cabal-syntax
    , containers
    , filepath
    , optparse-applicative
    , pretty-simple

  hs-source-dirs:   app
  default-language: Haskell2010

executable cabal-active-bounds
  import:           warnings
  main-is:          ActiveBounds.hs
  build-depends:
    , base
    , binary
    , bytestring
    , Cabal
    , cabal-install
    , cabal-install-solver
    , Cabal-syntax
    , cabal-tools:utils
    , containers
    , filepath

  hs-source-dirs:   app
  default-language: Haskell2010
