cabal-version:   3.6
name:            cabal-gen-bounds
version:         0.1.0.0
license:         MIT
author:          andrea@andreabedini.com
maintainer:      Andrea Bedini
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable cabal-gen-bounds
    import:           warnings
    main-is:          Main.hs
    build-depends:    base                 ^>= 4.14.3.0
                    , containers
                    , filepath
                    , Cabal                ^>= 3.8.0.0
                    , cabal-install        ^>= 3.8.0.0
                    , cabal-install-solver ^>= 3.8.0.0
                    , Cabal-syntax         ^>= 3.8.0.0
    hs-source-dirs:   app
    default-language: Haskell2010
